# egon-framework

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: DocumentationBuild.yml  DocumentationPublish.yml
docs/: index.md  technical_references.md
docs/_assets/css/: swagger.css
docs/_css/: hide_sidebar.css
docs/_overrides/: main.html
docs/getting_started/: install_setup.md
docs/technical_references/: index.md
