[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "egon-framework-github-io"
version = "0.0.0"
description = "Documentation for the Egon Framework."
authors = ["Daniel Perrefort"]

[tool.poetry.dependencies]
python = "^3.9"
neoteroi-mkdocs = "^1.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.3"
mkdocs-monorepo-plugin = "^1.0.4"
